force-app/main/default/objects/Project__c/fields/ValHasExpense__c.field-meta.xml
<CustomField>
    <fullName>ValHasExpense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValHasExpense</label>
    <type>Checkbox</type>
</CustomField>