force-app/main/default/objects/Project__c/fields/ValHasInvoice__c.field-meta.xml
<CustomField>
    <fullName>ValHasInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValHasInvoice</label>
    <type>Checkbox</type>
</CustomField>