force-app/main/default/objects/Project__c/fields/ValHasSupplierCosts__c.field-meta.xml
<CustomField>
    <fullName>ValHasSupplierCosts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValHasSupplierCosts</label>
    <type>Checkbox</type>
</CustomField>