force-app/main/default/objects/Project__c/fields/ValHasTime__c.field-meta.xml
<CustomField>
    <fullName>ValHasTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValHasTime</label>
    <type>Checkbox</type>
</CustomField>