force-app/main/default/objects/Project__c/fields/ValProjectHide__c.field-meta.xml
<CustomField>
    <fullName>ValProjectHide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValProjectHide</label>
    <type>Checkbox</type>
</CustomField>