force-app/main/default/objects/Project__c/fields/ValProjectPartnerNotProjectResponsibilit__c.field-meta.xml
<CustomField>
    <fullName>ValProjectPartnerNotProjectResponsibilit__c</fullName>
    <formula>IF(  ProjectCostCenter__c  = ProjectResponsibilityCompany__c ,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValProjectPartnerNotProjectResponsibilit</label>
    <type>Checkbox</type>
</CustomField>