force-app/main/default/objects/Project__c/fields/x12Forecast__c.field-meta.xml
<CustomField>
    <fullName>x12Forecast__c</fullName>
    <label>12+ Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>