force-app/main/default/objects/Project__c/recordTypes/ExternalLicense.recordType-meta.xml
<RecordType>
    <fullName>ExternalLicense</fullName>
    <active>true</active>
    <label>External - License / Trade</label>
</RecordType>