force-app/main/default/objects/Project__c/recordTypes/ExternalServices.recordType-meta.xml
<RecordType>
    <fullName>ExternalServices</fullName>
    <active>true</active>
    <label>External - Services</label>
</RecordType>