force-app/main/default/objects/Project__c/validationRules/PR002_RecordType_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>PR002_RecordType_Change</fullName>
    <active>true</active>
    <description>Project Record Type cannot be changed if related objects are available.</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
 $User.IsSuperUser__c = false,
ISCHANGED(RecordTypeId)
)</errorConditionFormula>
    <errorMessage>The Project Type can not be changed. Please contact your Super User for assistance.
(PR002)</errorMessage>
</ValidationRule>