force-app/main/default/objects/Project__c/validationRules/PR004_Billing_Account_Cost_Center_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>PR004_Billing_Account_Cost_Center_Match</fullName>
    <active>true</active>
    <description>Project Cost Center must match Account Cost Center</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
ProjectCostCenter__r.LegalAccount__r.Id  &lt;&gt; BillingViaCompany__r.Id)</errorConditionFormula>
    <errorDisplayField>ProjectCostCenter__c</errorDisplayField>
    <errorMessage>The Billing Account &amp; the selected Cost Center do not match.
(PR004)</errorMessage>
</ValidationRule>