force-app/main/default/objects/Project__c/validationRules/PR007_Currency_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>PR007_Currency_Mandatory</fullName>
    <active>true</active>
    <description>Project must have Currency</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
OR(
 ISNEW() ,
ISBLANK( TEXT(ContractPartner__r.CurrencyIsoCode )),
ISBLANK( TEXT(ProjectCurrency__c ))
),

OR(
 ISCHANGED(ProjectCurrency__c),
ISBLANK( TEXT(ProjectCurrency__c ))
)
)</errorConditionFormula>
    <errorDisplayField>ProjectCurrency__c</errorDisplayField>
    <errorMessage>You must choose a Project Currency.
(PR007)</errorMessage>
</ValidationRule>