force-app/main/default/objects/Project__c/validationRules/PR008_Project_Status_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>PR008_Project_Status_Mandatory</fullName>
    <active>true</active>
    <description>Project must have Status</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
ISBLANK( TEXT(ProjectStatus__c )))</errorConditionFormula>
    <errorDisplayField>ProjectStatus__c</errorDisplayField>
    <errorMessage>You must choose the Project Status.
(PR008)</errorMessage>
</ValidationRule>