force-app/main/default/objects/Project__c/validationRules/PR009_Project_Sub_Type_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>PR009_Project_Sub_Type_Mandatory</fullName>
    <active>true</active>
    <description>Project must have Subtype</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
ISBLANK( TEXT( ProjectSubType__c  )))</errorConditionFormula>
    <errorDisplayField>ProjectSubType__c</errorDisplayField>
    <errorMessage>You must choose a Project Sub-Type.
(PR009)</errorMessage>
</ValidationRule>