force-app/main/default/objects/Project__c/validationRules/PR014_Project_Management_Allowance_Perce.validationRule-meta.xml
<ValidationRule>
    <fullName>PR014_Project_Management_Allowance_Perce</fullName>
    <active>true</active>
    <description>Project Management Allowance Percent must be in line</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
ISPICKVAL( ProjectManagementBillingType__c ,&quot;AllowancePercent&quot;),
ISNULL( ProjectManagementAllowancePercent__c )
)</errorConditionFormula>
    <errorDisplayField>ProjectManagementAllowancePercent__c</errorDisplayField>
    <errorMessage>Please choose the Project Management Allowance %
(PR014)</errorMessage>
</ValidationRule>