force-app/main/default/objects/Project__c/validationRules/PR015_Expense_Allowance_Perce.validationRule-meta.xml
<ValidationRule>
    <fullName>PR015_Expense_Allowance_Perce</fullName>
    <active>true</active>
    <description>Expense Allowance Percent must be in line</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
ISPICKVAL(  ExpenseBillingType__c  ,&quot;AllowancePercent&quot;),
ISNULL(  ExpenseAllowancePercent__c  )
)</errorConditionFormula>
    <errorDisplayField>ExpenseAllowancePercent__c</errorDisplayField>
    <errorMessage>Please choose the Expense Allowance %
(PR015)</errorMessage>
</ValidationRule>