force-app/main/default/objects/Project__c/validationRules/PR016_Expense_Allowance_Percent_Remove.validationRule-meta.xml
<ValidationRule>
    <fullName>PR016_Expense_Allowance_Percent_Remove</fullName>
    <active>true</active>
    <description>Expense Allowance Percent must be removed</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
NOT(ISPICKVAL(  ExpenseBillingType__c  ,&quot;AllowancePercent&quot;)),
NOT(ISNULL(  ExpenseAllowancePercent__c  ))
)</errorConditionFormula>
    <errorDisplayField>ExpenseAllowancePercent__c</errorDisplayField>
    <errorMessage>Please remove the Expense Allowance %
(PR016)</errorMessage>
</ValidationRule>