force-app/main/default/objects/Project__c/validationRules/PR017_PM_Allowance_Percent_Remove.validationRule-meta.xml
<ValidationRule>
    <fullName>PR017_PM_Allowance_Percent_Remove</fullName>
    <active>true</active>
    <description>Project Management Allowance Percent must be removed</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
NOT(ISPICKVAL(   ProjectManagementBillingType__c   ,&quot;AllowancePercent&quot;)),
NOT(ISNULL(   ProjectManagementAllowancePercent__c   ))
)</errorConditionFormula>
    <errorDisplayField>ProjectManagementAllowancePercent__c</errorDisplayField>
    <errorMessage>Please remove the Project Management Allowance %
(PR017)</errorMessage>
</ValidationRule>