force-app/main/default/objects/Project__c/validationRules/PR020_Rate_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>PR020_Rate_Not_Null</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true, 
ISBLANK(ProjectRateHour__c )
)</errorConditionFormula>
    <errorDisplayField>ProjectRateHour__c</errorDisplayField>
    <errorMessage>You must add a rate to the project.
(PR020)</errorMessage>
</ValidationRule>