force-app/main/default/objects/Project__c/validationRules/PR021_Forecast_Exceeds_Budget_Open_2_Inv.validationRule-meta.xml
<ValidationRule>
    <fullName>PR021_Forecast_Exceeds_Budget_Open_2_Inv</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true, 
OR(
TotalForecast__c &gt;  (InvoiceOpenToBudget__c *1.05),
TotalForecast__c &lt;  (InvoiceOpenToBudget__c *0.95)
)
)</errorConditionFormula>
    <errorMessage>The Forecast exceeds the Budget Open to Invoice Amount. Please validate.
(PR021)</errorMessage>
</ValidationRule>