force-app/main/default/objects/Project__c/validationRules/PR022_Inactive_Contract_Partner.validationRule-meta.xml
<ValidationRule>
    <fullName>PR022_Inactive_Contract_Partner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true, 
ISNEW(),
ContractPartner__r.Inactive__c =true
)</errorConditionFormula>
    <errorDisplayField>ContractPartner__c</errorDisplayField>
    <errorMessage>This Contract Partner is Inactive, therefore you can not create a new Project. Please get in touch with Finance.
(PR022)</errorMessage>
</ValidationRule>