force-app/main/default/objects/Project__c/validationRules/PR023_VAT_25_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>PR023_VAT_25_Percent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
$User.UR100Trade25VAT__c =false,
ISPICKVAL( VATPercent__c, &quot;2.5%&quot;)  || ISPICKVAL( VATPercent__c, &quot;2.6%&quot;)
)</errorConditionFormula>
    <errorDisplayField>VATPercent__c</errorDisplayField>
    <errorMessage>You are not allowed to choose VAT 2.5%/2.6%. Please get in touch with Finance. 
(PR023)</errorMessage>
</ValidationRule>