force-app/main/default/objects/Project__c/validationRules/PR024_VAT_not_8_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>PR024_VAT_not_8_Percent</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
$User.PS480FunctionValidationRulesActive__c =true, 
$User.IsFinanceManager__c = false, 
NOT(ISPICKVAL(ProjectStatus__c,&quot;Closed&quot;)),
ISPICKVAL( VATPercent__c, &quot;8%&quot;) 
)</errorConditionFormula>
    <errorDisplayField>VATPercent__c</errorDisplayField>
    <errorMessage>You are not allowed to choose VAT 8%. Please get in touch with Finance. 
(PR024)</errorMessage>
</ValidationRule>