force-app/main/default/objects/Project__c/validationRules/PR025_VAT_not_19_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>PR025_VAT_not_19_Percent</fullName>
    <active>true</active>
    <description>Nur Rechnungen, welche von der &quot;gateB GmbH&quot; ausgestellt werden, dürfen mit VAT 19% besteuert werden --&gt; Deutschland&apos;s Standard-Steuersatz beträgt 19%.</description>
    <errorConditionFormula>AND(
  NOT(CONTAINS(  BillingViaCompany__r.AccountName__c , &quot;gateB GmbH&quot;)),
  $User.IsFinanceManager__c = false,
  ISPICKVAL(VATPercent__c, &quot;19%&quot;) 
)</errorConditionFormula>
    <errorDisplayField>VATPercent__c</errorDisplayField>
    <errorMessage>VAT 19% is only availablae for gateB GmbH (Cost Center gateB Germany). Please get in touch with Finance.
(PR025)</errorMessage>
</ValidationRule>