force-app/main/default/objects/Project__c/validationRules/PR026_VAT_not_81_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>PR026_VAT_not_81_Percent</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
$User.PS480FunctionValidationRulesActive__c =true, 
$User.IsFinanceManager__c = false, 
NOT(ISPICKVAL(ProjectStatus__c,&quot;Closed&quot;)),
ISPICKVAL( VATPercent__c, &quot;8.1%&quot;) 
)</errorConditionFormula>
    <errorDisplayField>VATPercent__c</errorDisplayField>
    <errorMessage>You are not allowed to choose VAT 8.1%. Please get in touch with Finance. 
(PR026)</errorMessage>
</ValidationRule>