force-app/main/default/objects/Project__c/validationRules/PR027_VAT_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>PR027_VAT_Mandatory</fullName>
    <active>false</active>
    <description>VAT can&apos;t be empty (if this is an external project)</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
ISPICKVAL( VATPercent__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>VATPercent__c</errorDisplayField>
    <errorMessage>You must choose a VAT rate
(PR027)</errorMessage>
</ValidationRule>