force-app/main/default/objects/Project__c/listViews/Alle_Internen_Projekte_Offen.listView-meta.xml
<ListView>
    <fullName>Alle_Internen_Projekte_Offen</fullName>
    <columns>NAME</columns>
    <columns>ProjectNr__c</columns>
    <columns>ProjectCostCenter__c</columns>
    <columns>ContractPartner__c</columns>
    <columns>ProjectType__c</columns>
    <columns>ProjectSubType__c</columns>
    <columns>ProjectStartDate__c</columns>
    <columns>ProjectStatus__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProjectType__c</field>
        <operation>equals</operation>
        <value>Internal</value>
    </filters>
    <filters>
        <field>ProjectSubType__c</field>
        <operation>equals</operation>
        <value>InternalProject</value>
    </filters>
    <filters>
        <field>ProjectStatus__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Alle Internen Projekte Offen</label>
</ListView>