force-app/main/default/objects/Project__c/listViews/BLC_Alle_Projekte_Offen.listView-meta.xml
<ListView>
    <fullName>BLC_Alle_Projekte_Offen</fullName>
    <columns>NAME</columns>
    <columns>ProjectNr__c</columns>
    <columns>ProjectResponsibleBusiness__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>ContractPartner__c</columns>
    <columns>ProjectStatus__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProjectCostCenter__c</field>
        <operation>contains</operation>
        <value>leadership</value>
    </filters>
    <filters>
        <field>ProjectStatus__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Absence</value>
    </filters>
    <label>BLC - Alle Projekte Offen</label>
    <sharedTo>
        <roleAndSubordinatesInternal>A_Companys</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>