force-app/main/default/objects/Project__c/listViews/BLC_bersicht_Abrechnen.listView-meta.xml
<ListView>
    <fullName>BLC_bersicht_Abrechnen</fullName>
    <booleanFilter>2 AND (1 OR 3 OR 4)</booleanFilter>
    <columns>ProjectResponsibleBusiness__c</columns>
    <columns>BillingViaCompany__c</columns>
    <columns>ContractPartner__c</columns>
    <columns>ProjectNr__c</columns>
    <columns>NAME</columns>
    <columns>ProjectStatus__c</columns>
    <columns>ServiceTotalAmountCHFBP__c</columns>
    <columns>InvoiceTotalAmountNetCHFBP__c</columns>
    <columns>ServicesTotalAmountCHF__c</columns>
    <columns>InvoiceTotalAmountCHF__c</columns>
    <columns>ILVTotalTimeCHF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LastTimeEntryDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>5/1/2017</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Project__c.Internal</value>
    </filters>
    <filters>
        <field>ProjectStatus__c</field>
        <operation>equals</operation>
        <value>Open,Partially open (w/o Time Entry)</value>
    </filters>
    <filters>
        <field>InvoiceTotalAmountNetCHFBP__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>BLC - Übersicht Abrechnen</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_FIN_Alle</group>
    </sharedTo>
</ListView>