force-app/main/default/objects/Project__c/listViews/Buchprojekte.listView-meta.xml
<ListView>
    <fullName>Buchprojekte</fullName>
    <columns>BillingViaCompany__c</columns>
    <columns>InvoiceReceiver__c</columns>
    <columns>ProjectNr__c</columns>
    <columns>NAME</columns>
    <columns>ContractPartner__c</columns>
    <columns>ProjectType__c</columns>
    <columns>ProjectSubType__c</columns>
    <columns>ProjectStatus__c</columns>
    <columns>VATPercent__c</columns>
    <columns>ProjectCostCenter__c</columns>
    <columns>InvoiceContact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProjectType__c</field>
        <operation>equals</operation>
        <value>External - License / Trade</value>
    </filters>
    <filters>
        <field>ProjectSubType__c</field>
        <operation>equals</operation>
        <value>Trade</value>
    </filters>
    <label>Buchprojekte</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_FIN_Alle</group>
        <group>Skywalk_HR_OM</group>
        <group>Skywalk_Inventory_Books_VH</group>
    </sharedTo>
</ListView>