force-app/main/default/objects/Project__c/listViews/CY_Alle_Projekte_Offen.listView-meta.xml
<ListView>
    <fullName>CY_Alle_Projekte_Offen</fullName>
    <columns>NAME</columns>
    <columns>ProjectNr__c</columns>
    <columns>ProjectResponsibleBusiness__c</columns>
    <columns>ContractPartner__c</columns>
    <columns>ProjectStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProjectCostCenter__c</field>
        <operation>equals</operation>
        <value>Calydo</value>
    </filters>
    <filters>
        <field>ProjectStatus__c</field>
        <operation>equals</operation>
        <value>Open,Partially open (w/o Time Entry)</value>
    </filters>
    <label>CY - Alle Projekte Offen</label>
    <language>de</language>
    <sharedTo>
        <roleAndSubordinatesInternal>CY</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>