force-app/main/default/objects/Project__c/listViews/CY_Uebersicht_Abrechnen.listView-meta.xml
<ListView>
    <fullName>CY_Uebersicht_Abrechnen</fullName>
    <booleanFilter>1 AND 3 AND (2 OR 4 OR 5)</booleanFilter>
    <columns>ProjectResponsibleBusiness__c</columns>
    <columns>BillingViaCompany__c</columns>
    <columns>ContractPartner__c</columns>
    <columns>ProjectNr__c</columns>
    <columns>NAME</columns>
    <columns>ProjectStatus__c</columns>
    <columns>ServiceTotalSupplierCostBP__c</columns>
    <columns>ServiceTotalAmountCHFBP__c</columns>
    <columns>InvoiceTotalAmountNetCHFBP__c</columns>
    <columns>CancellationTotalAmountNetCHFBP__c</columns>
    <columns>ServicesTotalAmountCHF__c</columns>
    <columns>InvoiceTotalAmountCHF__c</columns>
    <columns>ILVTotalTimeCHF__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BillingViaCompany__c</field>
        <operation>contains</operation>
        <value>calydo</value>
    </filters>
    <filters>
        <field>ServiceTotalAmountCHFBP__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Project__c.Internal</value>
    </filters>
    <filters>
        <field>ProjectStatus__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>InvoiceTotalAmountNetCHFBP__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>CY - Übersicht Abrechnen</label>
    <sharedTo>
        <group>Skywalk_CY_MD</group>
        <group>Skywalk_CY_Main</group>
        <role>CY_Team_Digital_Motion</role>
    </sharedTo>
</ListView>