force-app/main/default/objects/Project__c/listViews/GateB_Adhoc.listView-meta.xml
<ListView>
    <fullName>GateB_Adhoc</fullName>
    <booleanFilter>1 AND 3 AND (2 OR 4 OR 5) and 6 and 7 and 8</booleanFilter>
    <columns>ProjectResponsibleBusiness__c</columns>
    <columns>BillingViaCompany__c</columns>
    <columns>ContractPartner__c</columns>
    <columns>ProjectNr__c</columns>
    <columns>NAME</columns>
    <columns>ProjectStatus__c</columns>
    <columns>ServiceTotalAmountCHFBP__c</columns>
    <columns>InvoiceTotalAmountNetCHFBP__c</columns>
    <columns>CancellationTotalAmountNetCHFBP__c</columns>
    <columns>ServicesTotalAmountCHF__c</columns>
    <columns>InvoiceTotalAmountCHF__c</columns>
    <columns>ILVTotalTimeCHF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BillingViaCompany__c</field>
        <operation>contains</operation>
        <value>Gate</value>
    </filters>
    <filters>
        <field>ServiceTotalAmountCHFBP__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Project__c.Internal</value>
    </filters>
    <filters>
        <field>ProjectStatus__c</field>
        <operation>equals</operation>
        <value>Open,Partially open (w/o Time Entry)</value>
    </filters>
    <filters>
        <field>InvoiceTotalAmountNetCHFBP__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>InvoiceTotalAmountNetCHFBP__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ServiceTotalAmountCHFBP__c</field>
        <operation>greaterThan</operation>
        <value>1000</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>pitch</value>
    </filters>
    <label>GateB - Adhoc</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_FIN_Alle</group>
        <group>Skywalk_GBCH_Alle</group>
    </sharedTo>
</ListView>